results.txt
test_p1 (__main__.Test.test_p1) ... FAIL
test_p2 (__main__.Test.test_p2) ... ok
test_p3 (__main__.Test.test_p3) ... ERROR
test_p4 (__main__.Test.test_p4) ... FAIL
test_p5 (__main__.Test.test_p5) ... ok
test_p6 (__main__.Test.test_p6) ... ok
test_p7 (__main__.Test.test_p7) ... FAIL

======================================================================
ERROR: test_p3 (__main__.Test.test_p3)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\OneDrive\Bureaublad\TEST 2\test2-ZIIAS1-1111.py", line 25, in test_p3
    import p3
  File "c:\Users\Julie\OneDrive\Bureaublad\TEST 2\p3.py", line 21
    if values[f'{arr[]}'] < values[f'{(arr[1])}']:
                 ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

======================================================================
FAIL: test_p1 (__main__.Test.test_p1)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\OneDrive\Bureaublad\TEST 2\test2-ZIIAS1-1111.py", line 13, in test_p1
    self.assertEqual(p1.f(21),True)
AssertionError: None != True

======================================================================
FAIL: test_p4 (__main__.Test.test_p4)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\OneDrive\Bureaublad\TEST 2\test2-ZIIAS1-1111.py", line 31, in test_p4
    self.assertEqual(p4.f([33,22,55,55,33,55,55]),22)
AssertionError: '22' != 22

======================================================================
FAIL: test_p7 (__main__.Test.test_p7)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\Julie\OneDrive\Bureaublad\TEST 2\test2-ZIIAS1-1111.py", line 46, in test_p7
    self.assertEqual(p7.f({"a":[2,3,4]},2),7)
AssertionError: 0 != 7

----------------------------------------------------------------------
Ran 7 tests in 0.029s

FAILED (failures=3, errors=1)
